--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,14 @@
     "name": "socialiteproviders/kakao",
     "description": "Kakao OAuth2 Provider for Laravel Socialite",
     "license": "MIT",
-    "authors": [{
-        "name": "Doojin So",
-        "email": "sodoojin@gmail.com"
-    }],
+    "authors": [
+        {
+            "name": "Doojin So",
+            "email": "sodoojin@gmail.com"
+        }
+    ],
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^7.2",
         "ext-json": "*",
         "socialiteproviders/manager": "~2.0 || ~3.0"
     },
